# barcode-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
barcode_generator/: __init__.py  __main__.py  ean.py  image_gen.py
etc/: qr.py
tests/: test__ean.py  test__image_gen.py
