[project]
name = "barcode-generator"
version = "0.0.0"
description = ""
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]

[project.scripts]
code-gen = "barcode_generator.__main__:arguably.run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{include = "barcode_generator"}]

[tool.poetry.dependencies]
arguably = "^1.3.0"

[tool.poetry.group]
dev.optional = false
test.optional = false

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.6.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"


[tool.pytest.ini_options]
addopts = "--cov=barcode_generator --cov-fail-under=80"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
